# Jetson-HookAnalyzer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  EXPERIMENT3_PROGRESS.md  EXPERIMENT3_RESULTS.md  EXPERIMENT_ROADMAP.md  FINAL_SUMMARY.md  IMPROVEMENT_ROADMAP.md  PROJECT_STRUCTURE.md  QUICK_FIXES.md  README.md  README_CN.md  VERIFICATION_REPORT.md  demo_output.txt  requirements.txt
api/server/: main.py
benchmarks/: CMakeLists.txt  benchmark_kernels.cpp  gemm_analysis.cpp  gemm_compare.cpp
core/cuda_hook/: CMakeLists.txt  cuda_hook.cpp  cuda_hook.h
core/profiler/: CMakeLists.txt  profiler.cpp  profiler.h
core/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.h
docker/: Dockerfile  Dockerfile.local  docker-compose.yml  entrypoint.sh
docs/: DEMO_SAMPLES.md  PROJECT_OVERVIEW.md  README_WITH_VIDEO.md  quick_start.md
docs/experiments/: EXPERIMENT1_REPORT.md  VIDEO_RECORDING_GUIDE.md
engines/onnx_adapter/: CMakeLists.txt
engines/tensorrt_adapter/: CMakeLists.txt  tensorrt_engine.cpp  tensorrt_engine.h
examples/: CMakeLists.txt  kernel_test.cpp  simple_demo.cpp  simple_demo_minimal.cpp  test_tensorrt.cpp
kernels/optimized/: CMakeLists.txt  gemm_optimized_v2.cu  kernels.cu  kernels.h
monitoring/: prometheus.yml
scripts/: build_local.sh  convert_to_video.sh  demo_video.sh  deploy_automated.py  deploy_to_jetson.sh  quick_record.sh  record_video.sh  run_docker_dev.sh  setup_ssh_key.sh  setup_yolov8.py  test_yolov8_inference.py  test_yolov8_simple.py
tests/: CMakeLists.txt  test_basic.cpp
