# ONNX Runtime adapter (placeholder for future implementation)
# This will be implemented in future versions

message(STATUS "ONNX Runtime adapter: Placeholder (implementation pending)")

# Placeholder library
add_library(onnx_adapter INTERFACE)
target_include_directories(onnx_adapter INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
