# TensorRT adapter (placeholder for future implementation)
# This will be implemented in future versions

message(STATUS "TensorRT adapter: Placeholder (implementation pending)")

# Placeholder library
add_library(tensorrt_adapter INTERFACE)
target_include_directories(tensorrt_adapter INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
